# fast_api_tests

./: .gitignore  README.md  conftest.py  db.py  main.py  pyproject.toml  test.db
business_logic/: items.py  models.py
data_access/: items.py
docs/: diagram.drawio
models/business/result/: get_item_by_id.py
models/data_access/call/: get_item_by_id.py
routers/: items.py
src/: main.py
src/business_logic/: items.py
src/business_logic/domains/items/: __init__.py  get_item_by_id.py
src/business_logic/domains/orders/: get_order_by_id.py
src/business_logic/errors/: __init__.py  item_not_found.py
src/business_logic/items/: get_item_by_id.py
src/business_logic/items/errors/: __init__.py
src/business_logic/orders/: get_order_by_id.py
src/business_logic/orders/errors/: __init__.py
src/data_access/: items.py
src/data_access/domains/items/: get_item_by_id.py
src/data_access/domains/orders/: get_order_by_id.py
src/data_access/errors/: __init__.py  database_error.py
src/data_access/items/: get_item_by_id.py
src/data_access/items/errors/: __init__.py
src/data_access/items/models/: __init__.py  get_item_by_id.py
src/data_access/models/: __init__.py
src/data_access/orders/: __init__.py  get_order_by_id.py
src/data_access/orders/errors/: order_not_found.py
src/dependencies/: user.py
src/dependencies/get_user/: __init__.py  get_user.py
src/models/response/: __init__.py  get_item_by_id.py
src/routers/: items.py
src/routers/items/: get_item_by_id.py
src/routers/orders/: __init__.py  get_order_by_id.py
(+12 files in other folders)
