[project]
name = "fast-api-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
